<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014-2015 Bruno Parmentier.
  ~ Copyright (c) 2020-2022 François FERREIRA DE SOUSA.
  ~
  ~ This file is part of BikeSharingHub.
  ~ BikeSharingHub incorporates a modified version of OpenBikeSharing
  ~
  ~ BikeSharingHub is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ BikeSharingHub is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with BikeSharingHub.  If not, see <http://www.gnu.org/licenses/>.
--><resources>
    <!-- App name -->
    <string name="app_name" translatable="false">BikeSharingHub</string>
    <!-- Error messages -->
    <string name="connection_error">Connection error</string>
    <string name="ssl_error">SSL certificate not trusted by device</string>
    <string name="json_error">Error retrieving data</string>
    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map</string>
    <string name="action_directions">Directions</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_my_location">My location</string>
    <string name="action_search">Search</string>
    <!-- Activities titles -->
    <string name="title_activity_stations_list">Stations</string>
    <string name="title_activity_station">Station</string>
    <string name="title_activity_networks_list">Network choice</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Welcome dialog -->
    <string name="welcome_dialog_message">
        Before you begin, please choose a bike network in the list.
        \nAlso make sure you are connected to the Internet.
    </string>
    <string name="welcome_dialog_ok">OK</string>
    <string name="welcome_dialog_cancel">Cancel</string>
    <string name="welcome_dialog_title">Welcome</string>
    <!-- Map -->
    <string name="location_not_found">Location not found</string>
    <string name="location_not_granted">Location access denied</string>
    <string name="location_coarse_only">Using coarse location due to lack of permission</string>
    <string name="location_outdated">Your location is more than %1$s minutes old</string>
    <string name="network_selected">selected</string>
    <string name="bike_network_downloading">Please wait while bike network is being downloaded</string>
    <string name="map_cache_cleaning_started">Cleaning of map cache is in progress and may take a while</string>
    <string name="map_cache_cleaning_done">Cleaning of map cache done</string>
    <!-- Widget -->
    <string name="widget_title_favorite_stations">Favorite stations</string>
    <string name="widget_no_fav_stations">No favorite stations</string>
    <!-- Various -->
    <string name="free_bikes">Free bikes:\u00A0</string>
    <string name="free_ebikes">Electric bikes:\u00A0</string>
    <string name="empty_slots">Empty slots:\u00A0</string>
    <string name="all_stations">All stations</string>
    <string name="favorite_stations">Favorites</string>
    <string name="nearby_stations">Nearby</string>
    <string name="no_stations">No stations</string>
    <string name="no_favorite_stations">No favorite stations</string>
    <string name="no_nearby_stations">No nearby stations</string>
    <string name="loc_perm_forbidden">Access to location is denied.\nYou can choose another default tab for startup.\nOtherwise grant permission in your system settings.</string>
    <string name="station_added_to_favorites">Station added to favorites</string>
    <string name="stations_removed_from_favorites">Station removed from favorites</string>
    <string name="no_nav_application">You don\'t have any navigation application installed</string>
    <string name="is_bonus_station">Bonus station</string>
    <string name="cards_accepted">Cards accepted</string>
    <string name="db_last_update">Last update: %1$s</string>
    <string name="db_last_update_never">never</string>
    <plurals name="updated_secondes_ago">
        <item quantity="one">%d seconde ago</item>
        <item quantity="other">%d secondes ago</item>
    </plurals>
    <string name="updated_just_now">Just now</string>
    <plurals name="updated_minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="updated_hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="updated_days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <!-- Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_bike_networks_list">Network choice</string>
    <string name="pref_title_bike_networks_list_summary_none">None</string>
    <string name="pref_title_bike_networks_list_summary_multiple_selection">%d selected</string>
    <string name="pref_title_license">License</string>
    <string name="pref_title_license_message" translatable="false">
        BikeSharingHub
        \nCopyright © 2020-2026 François FERREIRA DE SOUSA and contributors
        \nThis program incorporates a modified version of OpenBikeSharing
        \nCopyright © 2014-2015 Bruno Parmentier\n

        \nThis program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.\n

        \nThis program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.\n

        \nYou should have received a copy of the GNU General Public License
        along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.\n
    </string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_source_code">Source code</string>
    <string name="pref_title_fork">Fork of</string>
    <string name="pref_title_citybikes_api">CityBikes API</string>
    <string name="pref_title_osmdroid_library">osmdroid library</string>
    <string name="pref_title_osmbonuspack_library">OSMBonusPack library</string>
    <string name="pref_title_openstreetmap">OpenStreetMap</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_map_layer_title">Map layer</string>
    <string name="pref_default_api_url" translatable="false">http://api.citybik.es/v2/</string>
    <string name="pref_map_layer_mapnik" translatable="false">Mapnik</string>
    <string name="pref_map_layer_cyclemap" translatable="false">CyclOSM</string>
    <string name="pref_map_layer_osmpublictransport" translatable="false">Öpnvkarte</string>
    <string name="pref_default_map_layer_value" translatable="false">osmpublictransport</string>
    <string name="pref_title_strip_station_id">Strip station ID</string>
    <string name="pref_title_strip_station_id_summary">
        Remove ID from station name (only useful for some networks)
    </string>
    <string name="pref_title_advanced">Advanced</string>
    <string name="pref_title_api_url">API URL</string>
    <string name="pref_title_default_tab">Default tab</string>
    <string name="pref_map_tiles_cache_max_size_title">Clean map cache if it exceeds</string>
    <string name="pref_map_tiles_cache_max_size_summary">%1$s MB (current cache size: %2$s MB)</string>
    <string name="pref_map_tiles_cache_trim_size_title">Cleaning brings the map cache down to</string>
    <string name="pref_map_tiles_cache_trim_size_summary">%1$s MB</string>
    <string name="pref_map_tiles_cache_size_hint">Integer between %1$s and %2$s</string>
    <string name="server_sends_old_data">The server sends old data for this station or the system time is not accurate</string>
</resources>
