<?xml version="1.0" encoding="utf-8"?>
<!--/
  ~ Copyright (c) 2026 François FERREIRA DE SOUSA.
  ~
  ~ This file is part of BikeSharingHub./
  ~
  ~ BikeSharingHub is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ BikeSharingHub is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with BikeSharingHub.  If not, see <http://www.gnu.org/licenses/>.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <EditTextPreference
            android:key="pref_api_url"
            android:title="@string/pref_title_api_url"
            android:hint="@string/pref_default_api_url"
            android:defaultValue="@string/pref_default_api_url" />

        <CheckBoxPreference
            android:key="pref_strip_id_station"
            android:summary="@string/pref_title_strip_station_id_summary"
            android:title="@string/pref_title_strip_station_id" />

        <fr.fdesousa.bikesharinghub.preferences.CacheSizeEditTextPreference
            android:key="pref_map_tiles_cache_max_size"
            android:title="@string/pref_map_tiles_cache_max_size_title"
            android:numeric="integer"
            android:inputType="number"
            android:defaultValue="100" />

        <fr.fdesousa.bikesharinghub.preferences.CacheSizeEditTextPreference
            android:key="pref_map_tiles_cache_trim_size"
            android:title="@string/pref_map_tiles_cache_trim_size_title"
            android:numeric="integer"
            android:inputType="number"
            android:defaultValue="20" />
</PreferenceScreen>