<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014-2015 Bruno Parmentier.
  ~ Copyright (c) 2021-2022,2024 François FERREIRA DE SOUSA.
  ~
  ~ This file is part of BikeSharingHub.
  ~ BikeSharingHub incorporates a modified version of OpenBikeSharing
  ~
  ~ BikeSharingHub is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ BikeSharingHub is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with BikeSharingHub.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="choose_network"
        android:title="@string/pref_title_bike_networks_list">
        <intent
            android:targetClass="fr.fdesousa.bikesharinghub.activities.BikeNetworksListActivity"
            android:targetPackage="@string/build_applicationId" />
    </Preference>

    <fr.fdesousa.bikesharinghub.preferences.UpdateListPreference
        android:defaultValue="@string/pref_default_map_layer_value"
        android:dialogTitle="@string/pref_map_layer_title"
        android:entries="@array/pref_map_layer_entries"
        android:entryValues="@array/pref_map_layer_values"
        android:key="pref_map_layer"
        android:summary="%s"
        android:title="@string/pref_map_layer_title" />

    <fr.fdesousa.bikesharinghub.preferences.UpdateListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/pref_title_default_tab"
        android:entries="@array/pref_default_tab_entries"
        android:entryValues="@array/pref_default_tab_values"
        android:key="pref_default_tab"
        android:summary="%s"
        android:title="@string/pref_title_default_tab" />

        <Preference
            android:key="advanced"
            android:title="@string/pref_title_advanced" >
            <intent
                android:targetClass="fr.fdesousa.bikesharinghub.activities.SettingsActivity"
                android:targetPackage="@string/build_applicationId" >
            <extra
                android:name="extra_subscreen_name"
                android:value="advanced" />
            </intent>
        </Preference>

    <Preference
        android:key="about"
        android:title="@string/pref_title_about" >
        <intent
            android:targetClass="fr.fdesousa.bikesharinghub.activities.SettingsActivity"
            android:targetPackage="@string/build_applicationId" >
            <extra
                android:name="extra_subscreen_name"
                android:value="about" />
        </intent>
    </Preference>

</PreferenceScreen>
