<!--
  ~ Copyright (c) 2014-2015 Bruno Parmentier.
  ~ Copyright (c) 2024 François FERREIRA DE SOUSA.
  ~
  ~ This file is part of BikeSharingHub.
  ~ BikeSharingHub incorporates a modified version of OpenBikeSharing
  ~
  ~ BikeSharingHub is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ BikeSharingHub is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with BikeSharingHub.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="be.brunoparmentier.openbikesharing.app.activities.MapActivity">

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_menu_favorite_outline"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_favorite" />

    <item
        android:id="@+id/action_directions"
        android:icon="@drawable/ic_menu_directions"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_directions" />

    <item
        android:id="@+id/action_my_location"
        android:icon="@drawable/ic_menu_mylocation"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_my_location" />
</menu>
